--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.7",
     "@babel/preset-env": "^7.26.7",
+    "@biomejs/biome": "^1.9.4",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.6.0",
