--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.6.0",
+    "unplugin-auto-import": "^19.1.0",
     "vite": "^6.0.5"
   },
   "jest": {
